@@ -37,9 +37,9 @@
  */
 
 /*
- */
 #define VIPS_DEBUG
 #define DEBUG
+ */
 
 #ifdef HAVE_CONFIG_H
 #include <config.h>
